--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@ body{
 /*==========================
   start of Global items
 ===========================*/
+a:hover{
+    text-decoration: none;
+}
 .btn{
     color: #fff;
     border-radius: 25px;
@@ -45,7 +48,13 @@ span{
     margin: 0 auto;
     border-radius: 10px;
 }
-.nav-menu{
+.navbar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+/* nav{
     width: 20px;
     height: 20px;
     position: fixed;
@@ -53,13 +62,14 @@ span{
     right: 28px;
     cursor: pointer;
     z-index: 200;
-}
+} */
+/*
 .nav-menu .nav-menu1{
     font-size: 30px;
     display: block;
     margin-bottom: 8px;
     color: #fff;
-}
+} */
 /*=========================
     End of Global items
 ===========================*/
@@ -192,10 +202,10 @@ span{
 ===========================*/
 #About{
     width: 100%;
-    padding-bottom: 50px;
+    padding-bottom: 40px;
 }
 #About .row-2{
-    padding-top: 50px;
+    padding-top: 30px;
 }
 #About .row-2 .row-col-1{
     display: flex;
@@ -205,7 +215,7 @@ span{
     width: 100%;
 }
 #About .row-2 .row-col-2 .tech{
-    width: 400px;
+    /* width: 400px; */
     margin-top: 10px;
     margin-left: -25px;
     display: flex;
@@ -231,14 +241,14 @@ span{
     padding-bottom: 60px;
 }
 #Services .row-2{
-    padding-top: 50px;
+    padding-top: 30px;
 }
 #Services .row-2 .row-col-1 .service1,#Services .row-2 .row-col-2 .service1,#Services .row-2 .row-col-3 .service1{
     display: flex;
     flex-direction: column;
     align-items: center;
     border: 1px solid gainsboro;
-    padding: 20px 40px;
+    padding: 30px 40px;
     margin-bottom: 20px;
     /* border-radius: 10px; */
 }
@@ -247,11 +257,11 @@ span{
     color: #C9302C;
 }
 #Services .row-2 .row-col-1 .service1 h3,#Services .row-2 .row-col-2 .service1 h3,#Services .row-2 .row-col-3 .service1 h3{
-    font-size: 17px;
+    font-size: 14px;
     font-weight: bold;
 }
 #Services .row-2 .row-col-1 .service1 p,#Services .row-2 .row-col-3 .service1 p,#Services .row-2 .row-col-2 .service1 p{
-    font-size: 18px;
+    font-size: 13px;
     text-align: center;
 }
 /*==========================
@@ -312,7 +322,7 @@ span{
     margin-bottom: 20px; */
 }
 #Portfolio .row-2 #menu1 .row-col-1 .portfolio1{
-    background: url("../img/gallery/gallery-1.jpg");
+    background: url("../img/portfolio1.PNG");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -322,7 +332,7 @@ span{
     margin-bottom: 20px;
 }
 #Portfolio .row-2 #menu1 .row-col-1 .portfolio2{
-    background: url("../img/gallery/gallery-2.jpg");
+    background: url("../img/portfolio6.PNG");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -332,7 +342,7 @@ span{
     margin-bottom: 20px;
 }
 #Portfolio .row-2 #menu1 .row-col-2 .portfolio3{
-    background: url("../img/gallery/gallery-3.jpg");
+    background: url("../img/portfolio2.PNG");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -342,7 +352,7 @@ span{
     margin-bottom: 20px;
 }
 #Portfolio .row-2 #menu1 .row-col-2 .portfolio4{
-    background: url("../img/gallery/gallery-4.jpg");
+    background: url("../img/portfolio5.PNG");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -352,9 +362,9 @@ span{
     margin-bottom: 20px;
 }
 #Portfolio .row-2 #menu1 .row-col-3 .portfolio5{
-    background: url("../img/gallery/gallery-6.jpg");
+    background: url("../img/portfolio4.PNG");
     background-size: cover;
-    background-position: center;
+    /* background-position: center; */
     background-repeat: no-repeat;
     border: 1px solid gainsboro;
     width: 100%;
@@ -362,9 +372,9 @@ span{
     margin-bottom: 20px;
 }
 #Portfolio .row-2 #menu1 .row-col-3 .portfolio6{
-    background: url("../img/gallery/advanced-feature-3.jpg");
+    background: url("../img/portfolio3.PNG");
     background-size: cover;
-    background-position: center;
+    background-position: left;
     background-repeat: no-repeat;
     border: 1px solid gainsboro;
     width: 100%;
@@ -595,6 +605,12 @@ span{
         width: 100%;
         height: 300px;
         margin-bottom: 20px;
+    }
+    #Contact .row-2 .row-col-2{
+        padding-left: 10px;
+    }
+    #Contact .row-2 .row-col-1{
+        padding-left: 10px;
     }
 } 
 /*==========================
